--- a/Addon/HB-UNI-SenAct-4-4-addon-src/addon/install
+++ b/Addon/HB-UNI-SenAct-4-4-addon-src/addon/install
@@ -1,15 +1,62 @@
 #!/bin/sh
 
+mount -o remount,rw /
+
 ADDON_NAME=hbunisenact44
 DEVICE="HB-UNI-SenAct-4-4-SC"
 DEVICE_IMG=hb-uni-senact-4-4.png
 DEVICE_THUMB=hb-uni-senact-4-4_thumb.png
 DEVICE_DESC="4x Aktor u. 4x Kontakt"
 
-mount -o remount,rw /
-
 ##########################################
 ### New DEVICE HB-UNI-SenAct-4-4-SC    ###
+##########################################
+
+### Copy new devices Files ###
+cp -a firmware/rftypes/* /firmware/rftypes/
+
+### Copy new images ###
+cp -ar www/config/img/devices /www/config/img/
+
+chown root:root /www/config/img/devices/250/$DEVICE_IMG
+chmod 755 /www/config/img/devices/250/$DEVICE_IMG
+chown root:root /www/config/img/devices/50/$DEVICE_THUMB
+chmod 755 /www/config/img/devices/50/$DEVICE_THUMB
+
+### Edit DEVDB.tcl ###
+devdescrFile="/www/config/devdescr/DEVDB.tcl"
+devdescrSearch="array[[:space:]]*set[[:space:]]*DEV_PATHS[[:space:]]*{"
+
+devdescrInsert="$DEVICE {{50 \/config\/img\/devices\/50\/$DEVICE_THUMB} {250 \/config\/img\/devices\/250\/$DEVICE_IMG}} "
+
+if [ -z "`cat $devdescrFile | grep \"$DEVICE\"`" ]; then
+	sed -i "s/\($devdescrSearch\)/\1$devdescrInsert/g" $devdescrFile
+fi
+
+### Edit webui.js ###
+webuiFile="/www/webui/webui.js"
+webuiSearch="DEV_HIGHLIGHT[[:space:]]*=[[:space:]]*new Array();"
+
+webuiInsert="\n"
+webuiInsert="${webuiInsert}DEV_HIGHLIGHT['$DEVICE'] = new Object();\n"
+webuiInsert="${webuiInsert}DEV_LIST.push('$DEVICE');\n"
+webuiInsert="${webuiInsert}DEV_DESCRIPTION['$DEVICE']='$DEVICE_DESC';\n"
+webuiInsert="${webuiInsert}DEV_PATHS['$DEVICE'] = new Object();\n"
+webuiInsert="${webuiInsert}DEV_PATHS['$DEVICE']['50'] = '\/config\/img\/devices\/50\/$DEVICE_THUMB';\n"
+webuiInsert="${webuiInsert}DEV_PATHS['$DEVICE']['250'] = '\/config\/img\/devices\/250\/$DEVICE_IMG';"
+
+if [ -z "`cat $webuiFile | grep \"$DEVICE\"`" ]; then
+	sed -i "s/\($webuiSearch\)/\1$webuiInsert/g" $webuiFile
+fi
+
+ADDON_NAME=hbunisenact44
+DEVICE="HB-UNI-SenAct-4-4-RC"
+DEVICE_IMG=hb-uni-senact-4-4.png
+DEVICE_THUMB=hb-uni-senact-4-4_thumb.png
+DEVICE_DESC="4x Aktor u. 4x Taster"
+
+##########################################
+### New DEVICE HB-UNI-SenAct-4-4-RC    ###
 ##########################################
 
 ### Copy new devices Files ###
